Make sure mobile menu never gets overlapped by other stuff.

--- a/css/header.css
+++ b/css/header.css
@@ -2,8 +2,8 @@
 .nav-bar {
   background: rgba(255, 255, 255, 0.75);
   border-bottom: 1px solid #d9d6d0;
+  position: relative;
   top: 0;
-  /*position: fixed;*/
   width: 100%;
   z-index: 40000;
 }
